--- a/warmup.ipynb
+++ b/warmup.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "warmup.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNGoRgM+U8bbjp4KQ7Fdlfj",
+      "authorship_tag": "ABX9TyORnvur8RGxigm/36nKuRCV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/SHEIKHIA/TTP01/blob/main/warmup.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/SHEIKHIA/TTP_Workshop_2020/blob/main/warmup.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -191,8 +191,8 @@
         "print(int(0.1))\n",
         "print(float(100))\n",
         "print(str(0.1))\n",
-        "print(str(100.00))\n",
-        "print(str(True))\n",
+        "print(str(2j))\n",
+        "print(int(True))\n",
         "msg = \"Sheikh\"\n",
         "print(msg.upper())\n"
       ],
@@ -201,9 +201,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OKfBFunBnef1",
-        "outputId": "f01b8d7c-dc31-4d42-bc32-cb2c49c87e1d"
+        "outputId": "9d775a0d-38b2-44d8-b770-2dcc05891ce8"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,8 +212,8 @@
             "0\n",
             "100.0\n",
             "0.1\n",
-            "100.0\n",
-            "True\n",
+            "2j\n",
+            "1\n",
             "SHEIKH\n"
           ]
         }
